--- a/Main_ipad.storyboard
+++ b/Main_ipad.storyboard
@@ -55,9 +55,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
-                                        <connections>
-                                            <segue destination="39746" kind="modal" id="lSp-fn-PVx"/>
-                                        </connections>
+                                        <connections/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="31">
                                         <rect key="frame" x="262" y="444" width="266" height="54"/>
